fix styling so it works on ios

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,12 +1,1 @@
 /* Empty. Add your own CSS if you like */
-
-.scroll{
-  height: 100%;
-}
-
-.center-all {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-}
